@@ -1,0 +1,29 @@
+<?xml version="1.0"?>
+<!DOCTYPE modification SYSTEM "http://www.simplemachines.org/xml/modification">
+
+<modification xmlns="http://www.simplemachines.org/xml/modification" xmlns:smf="http://www.simplemachines.org/">
+	<id>el:prettyurls-extras</id>
+	<version>0.9</version>
+
+	<file name="$sourcedir/PrettyUrls-Filters.php">
+		<operation>
+			<search position="end"></search>
+			<add><![CDATA[
+//	Filter TP articles
+function pretty_tp_articles_filter($urls)
+{
+	global $boardurl, $scripturl;
+
+	$pattern = '~' . $scripturl . '(.*)page=([^;]+)~S';
+	$replacement = $boardurl . '/$2/$1';
+	foreach ($urls as $url_id => $url)
+		if (!isset($url['replacement']))
+			if (preg_match($pattern, $url['url']))
+				$urls[$url_id]['replacement'] = preg_replace($pattern, $replacement, $url['url']);
+	return $urls;
+}
+]]></add>
+		</operation>
+	</file>
+
+</modification>
