@@ -1,0 +1,37 @@
+<?xml version="1.0"?>
+<!DOCTYPE package-info SYSTEM "http://www.simplemachines.org/xml/package-info">
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	ATTENTION: If you are trying to install this manually, you should try
+	the package manager.  If it will not work for you, please take a look
+	at the following for information on this format:
+		http://mods.simplemachines.org/docs/manual-install.php
+ - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<package-info xmlns="http://www.simplemachines.org/xml/package-info">
+	<id>el:prettyurls-extras</id>
+	<version>0.9</version>
+	<name>Pretty URLs Extras</name>
+	<type>modification</type>
+
+	<install for="1.1, 1.1.0-1.1.99">
+		<readme parsebbc="true">readme-install.bbc</readme>
+		<modification>Sources.xml</modification>
+		<code>install-SMF1-1.php</code>
+	</install>
+	<uninstall for="1.1, 1.1.0-1.1.99">
+		<modification reverse="true">Sources.xml</modification>
+		<code>uninstall-SMF1-1.php</code>
+	</uninstall>
+
+	<install for="2.0 Beta 3, 2.0 Beta 3 Public, 2.0 Beta 3.1 Public">
+		<readme parsebbc="true">readme-install.bbc</readme>
+		<modification>Sources.xml</modification>
+		<code>install-SMF2-0.php</code>
+	</install>
+	<uninstall for="2.0 Beta 3, 2.0 Beta 3 Public, 2.0 Beta 3.1 Public">
+		<modification reverse="true">Sources.xml</modification>
+		<code>uninstall-SMF2-0.php</code>
+	</uninstall>
+
+</package-info>
