@@ -1,24 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE package-info SYSTEM "http://www.simplemachines.org/xml/package-info">
-
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-	ATTENTION: If you are trying to install this manually, you should try
-	the package manager.  If it will not work for you, please take a look
-	at the following for information on this format:
-		http://mods.simplemachines.org/docs/manual-install.php
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-<package-info xmlns="http://www.simplemachines.org/xml/package-info" xmlns:smf="http://www.simplemachines.org/">
-	<id>el:prettyurls-seo4smf</id>
-	<version>0.8</version>
-	<name>Pretty URLs - SEO4SMF Redirection Patch</name>
-	<type>modification</type>
-
-	<install for="1.1, 1.1.0-1.1.99">
-		<code type="file">install.php</code>
-	</install>
-	<uninstall for="1.1, 1.1.0-1.1.99">
-		<code type="file">uninstall.php</code>
-	</uninstall>
-
-</package-info>
